changed list functionality

--- a/src/sass/components/_song-list.scss
+++ b/src/sass/components/_song-list.scss
@@ -15,7 +15,7 @@
 			width: 100px;
 		}
 
-		.fa-times {
+		.history-action {
 			background: rgba(20,20,20,1.0);
 			padding: 10px;
 			border-radius: 10px;
