--- a/src/sass/components/_song-list.scss
+++ b/src/sass/components/_song-list.scss
@@ -4,12 +4,16 @@
 	width: 100%;
 	position: relative;
 	max-height: 72vh;
+	max-width: 650px;
+	margin: 0 auto;
 
 	.song {
 		@include display(flex);
 		@include align-items(center);
 		@include justify-content(space-between);
 		margin-bottom: 15px;
+		min-height: 64px;
+		
 		.art {
 			margin-right: 15px;
 			width: 100px;
@@ -32,6 +36,7 @@
 		max-height: 65vh;
 		overflow: auto;
 	}
+
 	.fadeout {
 	    position: absolute;
 	    bottom: 0;
@@ -65,4 +70,28 @@
 		opacity: 0;
 	  	transition: visibility 0s 2s, opacity 2s linear;
 	}
+}
+
+
+		/* Let's get this party started */
+::-webkit-scrollbar {
+    width: 12px;
+}
+ 
+/* Track */
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    background: rgba(255,0,0,0.8); 
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+}
+::-webkit-scrollbar-thumb:window-inactive {
+	background: rgba(255,0,0,0.4); 
 }
