--- a/src/sass/components/_song-list.scss
+++ b/src/sass/components/_song-list.scss
@@ -4,8 +4,14 @@
 	width: 100%;
 	position: relative;
 	max-height: 72vh;
-	max-width: 650px;
+	max-width: 850px;
 	margin: 0 auto;
+	
+	.placeholder {
+		width: 100%;
+		margin-top: 25px;
+		text-align: center;
+	}
 
 	.song {
 		@include display(flex);
@@ -75,7 +81,7 @@
 
 		/* Let's get this party started */
 ::-webkit-scrollbar {
-    width: 12px;
+    width: 5px;
 }
  
 /* Track */
@@ -89,9 +95,10 @@
 ::-webkit-scrollbar-thumb {
     -webkit-border-radius: 10px;
     border-radius: 10px;
-    background: rgba(255,0,0,0.8); 
+    background: rgba(50,50,50,0.8); 
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+
 }
 ::-webkit-scrollbar-thumb:window-inactive {
-	background: rgba(255,0,0,0.4); 
+	background: rgba(50,50,50,0.4); 
 }
